<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_text" />

    <EditText
        android:id="@+id/edit_text_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <Button
        android:id="@+id/button_save_internal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save_internal" />

    <Button
        android:id="@+id/button_load_internal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_load_internal" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="100dp" />

    <Button
        android:id="@+id/button_save_external"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save_external" />

    <Button
        android:id="@+id/button_load_external"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_load_external" />

</LinearLayout>